feat: add WnSlate, WnSlateHeader, and WnSlateHeaderAction components (#128)
* feat: add WnSlate, WnSlateHeader, and WnSlateHeaderAction components

Implement Slate component system based on Figma designs for issue #67:
- WnSlate: Main slate container with Hero animation for screen transitions,
  header variants (default/close/back/noHeader), scroll edge effects
- WnSlateHeader: Header with avatar, title, and action buttons
- WnSlateHeaderAction: Action buttons (newChat, close, back)

Includes comprehensive tests with 100% coverage.

* fix: use .sp for letterSpacing in WnSlateHeader

* refactor(WnSlate): accept header as widget prop instead of specific callbacks

Simplifies WnSlate API by accepting a header widget directly rather than
managing header-specific props (type, title, avatarUrl, callbacks).

Before:
  WnSlate(
    type: WnSlateType.close,
    title: 'Settings',
    onCloseTap: () => ...,
  )

After:
  WnSlate(
    header: WnSlateHeader(
      type: WnSlateHeaderType.close,
      title: 'Settings',
      onCloseTap: () => ...,
    ),
  )

This makes WnSlate a simple container with optional header slot,
giving callers full control over header configuration.

* fix(WnSlateHeader): remove hard-coded fontFamily to inherit from theme

* fix(WnSlateHeader): only apply title padding when action button is rendered

Previously, padding was based solely on action type (back vs close),
causing the title to be off-center when no onActionTap was provided.
Now padding is only applied when the corresponding action button is
actually rendered.

* test(WnSlate): add test for flightShuttleBuilder to achieve 100% coverage

Directly invoke the flightShuttleBuilder callback to verify it returns
the expected Material > Container structure with correct properties.

* fix: use backgroundSecondary for scroll effects and .w scaling in test

- Change WnScrollEdgeEffect color from backgroundPrimary to backgroundSecondary
- Use flutter_screenutil .w scaling for EdgeInsets in flightShut

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -5,7 +5,7 @@
   "tagline2": "Mensajería Segura.",
   "login": "Iniciar sesión",
   "signUp": "Registrarse",
-  "loginTitle": "Iniciar sesión en White Noise",
+  "loginTitle": "Iniciar sesión",
   "enterPrivateKey": "Introduce tu llave privada",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Configurar perfil",
@@ -21,6 +21,7 @@
   "settings": "Configuración",
   "shareAndConnect": "Compartir y conectar",
   "switchProfile": "Cambiar perfil",
+  "addNewProfile": "Añadir un nuevo perfil",
   "editProfile": "Editar perfil",
   "profileKeys": "Llaves del perfil",
   "networkRelays": "Relés de red",
@@ -49,6 +50,7 @@
   "aboutYou": "Sobre ti",
   "profileIsPublic": "El perfil es público",
   "profilePublicDescription": "La información de tu perfil será visible para todos en la red.",
+  "discard": "Descartar",
   "discardChanges": "Descartar cambios",
   "save": "Guardar",
   "profileUpdatedSuccessfully": "Perfil actualizado correctamente",
@@ -96,6 +98,10 @@
   "deleteAllKeyPackages": "Eliminar Todos los Paquetes de Llaves",
   "keyPackagesCount": "Paquetes de Llaves ({count})",
   "noKeyPackagesFound": "No se encontraron paquetes de llaves",
+  "keyPackagePublished": "Paquete de llaves publicado",
+  "keyPackagesRefreshed": "Paquetes de llaves actualizados",
+  "keyPackagesDeleted": "Todos los paquetes de llaves eliminados",
+  "keyPackageDeleted": "Paquete de llaves eliminado",
   "packageNumber": "Paquete {number}",
   "ohNo": "¡Oh no!",
   "goBack": "Volver",
