--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -5,7 +5,7 @@
   "tagline2": "Messaggistica Sicura.",
   "login": "Accedi",
   "signUp": "Registrati",
-  "loginTitle": "Accedi a White Noise",
+  "loginTitle": "Accedi",
   "enterPrivateKey": "Inserisci la tua chiave privata",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Configura profilo",
@@ -21,6 +21,7 @@
   "settings": "Impostazioni",
   "shareAndConnect": "Condividi e connetti",
   "switchProfile": "Cambia profilo",
+  "addNewProfile": "Aggiungi un nuovo profilo",
   "editProfile": "Modifica profilo",
   "profileKeys": "Chiavi del profilo",
   "networkRelays": "Relay di rete",
@@ -49,6 +50,7 @@
   "aboutYou": "Su di te",
   "profileIsPublic": "Il profilo è pubblico",
   "profilePublicDescription": "Le informazioni del tuo profilo saranno visibili a tutti sulla rete.",
+  "discard": "Annulla",
   "discardChanges": "Annulla modifiche",
   "save": "Salva",
   "profileUpdatedSuccessfully": "Profilo aggiornato con successo",
@@ -96,6 +98,10 @@
   "deleteAllKeyPackages": "Elimina Tutti i Pacchetti Chiavi",
   "keyPackagesCount": "Pacchetti Chiavi ({count})",
   "noKeyPackagesFound": "Nessun pacchetto chiavi trovato",
+  "keyPackagePublished": "Pacchetto chiavi pubblicato",
+  "keyPackagesRefreshed": "Pacchetti chiavi aggiornati",
+  "keyPackagesDeleted": "Tutti i pacchetti chiavi eliminati",
+  "keyPackageDeleted": "Pacchetto chiavi eliminato",
   "packageNumber": "Pacchetto {number}",
   "ohNo": "Oh no!",
   "goBack": "Torna indietro",
