--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -5,7 +5,7 @@
   "tagline2": "Безопасный Мессенджер.",
   "login": "Войти",
   "signUp": "Регистрация",
-  "loginTitle": "Вход в White Noise",
+  "loginTitle": "Войти",
   "enterPrivateKey": "Введите ваш приватный ключ",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Настройка профиля",
@@ -21,6 +21,7 @@
   "settings": "Настройки",
   "shareAndConnect": "Поделиться и подключиться",
   "switchProfile": "Сменить профиль",
+  "addNewProfile": "Добавить новый профиль",
   "editProfile": "Редактировать профиль",
   "profileKeys": "Ключи профиля",
   "networkRelays": "Сетевые реле",
@@ -49,6 +50,7 @@
   "aboutYou": "О вас",
   "profileIsPublic": "Профиль публичный",
   "profilePublicDescription": "Информация вашего профиля будет видна всем в сети.",
+  "discard": "Отменить",
   "discardChanges": "Отменить изменения",
   "save": "Сохранить",
   "profileUpdatedSuccessfully": "Профиль успешно обновлён",
@@ -96,6 +98,10 @@
   "deleteAllKeyPackages": "Удалить Все Пакеты Ключей",
   "keyPackagesCount": "Пакеты Ключей ({count})",
   "noKeyPackagesFound": "Пакеты ключей не найдены",
+  "keyPackagePublished": "Пакет ключей опубликован",
+  "keyPackagesRefreshed": "Пакеты ключей обновлены",
+  "keyPackagesDeleted": "Все пакеты ключей удалены",
+  "keyPackageDeleted": "Пакет ключей удалён",
   "packageNumber": "Пакет {number}",
   "ohNo": "О нет!",
   "goBack": "Назад",
