--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -5,7 +5,7 @@
   "tagline2": "Sichere Nachrichten.",
   "login": "Anmelden",
   "signUp": "Registrieren",
-  "loginTitle": "Bei White Noise anmelden",
+  "loginTitle": "Anmelden",
   "enterPrivateKey": "Privaten Schlüssel eingeben",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Profil einrichten",
@@ -21,6 +21,7 @@
   "settings": "Einstellungen",
   "shareAndConnect": "Teilen & verbinden",
   "switchProfile": "Profil wechseln",
+  "addNewProfile": "Neues Profil hinzufügen",
   "editProfile": "Profil bearbeiten",
   "profileKeys": "Profilschlüssel",
   "networkRelays": "Netzwerk-Relays",
@@ -49,6 +50,7 @@
   "aboutYou": "Über dich",
   "profileIsPublic": "Profil ist öffentlich",
   "profilePublicDescription": "Deine Profilinformationen sind für alle im Netzwerk sichtbar.",
+  "discard": "Verwerfen",
   "discardChanges": "Änderungen verwerfen",
   "save": "Speichern",
   "profileUpdatedSuccessfully": "Profil erfolgreich aktualisiert",
@@ -96,6 +98,10 @@
   "deleteAllKeyPackages": "Alle Schlüsselpakete löschen",
   "keyPackagesCount": "Schlüsselpakete ({count})",
   "noKeyPackagesFound": "Keine Schlüsselpakete gefunden",
+  "keyPackagePublished": "Schlüsselpaket veröffentlicht",
+  "keyPackagesRefreshed": "Schlüsselpakete aktualisiert",
+  "keyPackagesDeleted": "Alle Schlüsselpakete gelöscht",
+  "keyPackageDeleted": "Schlüsselpaket gelöscht",
   "packageNumber": "Paket {number}",
   "ohNo": "Oh nein!",
   "goBack": "Zurück",
