--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -5,7 +5,7 @@
   "tagline2": "Messagerie Sécurisée.",
   "login": "Connexion",
   "signUp": "S'inscrire",
-  "loginTitle": "Connexion à White Noise",
+  "loginTitle": "Connexion",
   "enterPrivateKey": "Entrez votre clé privée",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Configurer le profil",
@@ -21,6 +21,7 @@
   "settings": "Paramètres",
   "shareAndConnect": "Partager et connecter",
   "switchProfile": "Changer de profil",
+  "addNewProfile": "Ajouter un nouveau profil",
   "editProfile": "Modifier le profil",
   "profileKeys": "Clés du profil",
   "networkRelays": "Relais réseau",
@@ -49,6 +50,7 @@
   "aboutYou": "À propos de vous",
   "profileIsPublic": "Le profil est public",
   "profilePublicDescription": "Les informations de votre profil seront visibles par tous sur le réseau.",
+  "discard": "Annuler",
   "discardChanges": "Annuler les modifications",
   "save": "Enregistrer",
   "profileUpdatedSuccessfully": "Profil mis à jour avec succès",
@@ -96,6 +98,10 @@
   "deleteAllKeyPackages": "Supprimer Tous les Paquets de Clés",
   "keyPackagesCount": "Paquets de Clés ({count})",
   "noKeyPackagesFound": "Aucun paquet de clés trouvé",
+  "keyPackagePublished": "Paquet de clés publié",
+  "keyPackagesRefreshed": "Paquets de clés actualisés",
+  "keyPackagesDeleted": "Tous les paquets de clés supprimés",
+  "keyPackageDeleted": "Paquet de clés supprimé",
   "packageNumber": "Paquet {number}",
   "ohNo": "Oh non !",
   "goBack": "Retour",
