--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -5,7 +5,7 @@
   "tagline2": "Güvenli Mesajlaşma.",
   "login": "Giriş Yap",
   "signUp": "Kayıt Ol",
-  "loginTitle": "White Noise'a Giriş Yap",
+  "loginTitle": "Giriş Yap",
   "enterPrivateKey": "Özel anahtarınızı girin",
   "nsecPlaceholder": "nsec...",
   "setupProfile": "Profil ayarla",
@@ -21,6 +21,7 @@
   "settings": "Ayarlar",
   "shareAndConnect": "Paylaş ve bağlan",
   "switchProfile": "Profil değiştir",
+  "addNewProfile": "Yeni profil ekle",
   "editProfile": "Profili düzenle",
   "profileKeys": "Profil anahtarları",
   "networkRelays": "Ağ röleleri",
@@ -49,6 +50,7 @@
   "aboutYou": "Hakkınızda",
   "profileIsPublic": "Profil herkese açık",
   "profilePublicDescription": "Profil bilgileriniz ağdaki herkes tarafından görülebilir.",
+  "discard": "At",
   "discardChanges": "Değişiklikleri at",
   "save": "Kaydet",
   "profileUpdatedSuccessfully": "Profil başarıyla güncellendi",
@@ -96,6 +98,10 @@
   "deleteAllKeyPackages": "Tüm Anahtar Paketlerini Sil",
   "keyPackagesCount": "Anahtar Paketleri ({count})",
   "noKeyPackagesFound": "Anahtar paketi bulunamadı",
+  "keyPackagePublished": "Anahtar paketi yayınlandı",
+  "keyPackagesRefreshed": "Anahtar paketleri yenilendi",
+  "keyPackagesDeleted": "Tüm anahtar paketleri silindi",
+  "keyPackageDeleted": "Anahtar paketi silindi",
   "packageNumber": "Paket {number}",
   "ohNo": "Ah hayır!",
   "goBack": "Geri dön",
