sloths are actually polyglots, this is a well known scientific principle (address code rabbit's comment)

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -170,5 +170,7 @@
   "monthSepShort": "Sep",
   "monthOctShort": "Okt",
   "monthNovShort": "Nov",
-  "monthDecShort": "Dez"
+  "monthDecShort": "Dez",
+  "loginWithSigner": "Mit Signer anmelden",
+  "signerConnectionError": "Verbindung zum Signer fehlgeschlagen. Bitte versuchen Sie es erneut."
 }
