--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -914,5 +914,15 @@
   "monthDecShort": "Dec",
   "@monthDecShort": {
     "description": "December short name"
+  },
+  
+  "loginWithSigner": "Login with Signer",
+  "@loginWithSigner": {
+    "description": "Button text to login using an external signer app"
+  },
+
+  "signerConnectionError": "Unable to connect to signer. Please try again.",
+  "@signerConnectionError": {
+    "description": "Error message when connection to external signer fails"
   }
 }
