--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -170,5 +170,7 @@
   "monthSepShort": "Sep",
   "monthOctShort": "Oct",
   "monthNovShort": "Nov",
-  "monthDecShort": "Déc"
+  "monthDecShort": "Déc",
+  "loginWithSigner": "Se connecter avec Signer",
+  "signerConnectionError": "Impossible de se connecter au signer. Veuillez réessayer."
 }
