sloths are actually polyglots, this is a well known scientific principle (address code rabbit's comment)

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -139,5 +139,7 @@
   "failedToStartChat": "Chat konnte nicht gestartet werden. Bitte versuchen Sie es erneut.",
   "userNotOnWhiteNoise": "Dieser Benutzer ist noch nicht bei White Noise.",
   "failedToUpdateFollow": "Folgestatus konnte nicht aktualisiert werden. Bitte versuchen Sie es erneut.",
-  "imagePickerError": "Bild konnte nicht ausgewählt werden. Bitte versuchen Sie es erneut."
+  "imagePickerError": "Bild konnte nicht ausgewählt werden. Bitte versuchen Sie es erneut.",
+  "loginWithSigner": "Mit Signer anmelden",
+  "signerConnectionError": "Verbindung zum Signer fehlgeschlagen. Bitte versuchen Sie es erneut."
 }
