--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -139,5 +139,7 @@
   "failedToStartChat": "Échec du démarrage de la discussion. Veuillez réessayer.",
   "userNotOnWhiteNoise": "Cet utilisateur n'est pas encore sur White Noise.",
   "failedToUpdateFollow": "Échec de la mise à jour du statut de suivi. Veuillez réessayer.",
-  "imagePickerError": "Échec de la sélection de l'image. Veuillez réessayer."
+  "imagePickerError": "Échec de la sélection de l'image. Veuillez réessayer.",
+  "loginWithSigner": "Se connecter avec Signer",
+  "signerConnectionError": "Impossible de se connecter au signer. Veuillez réessayer."
 }
