--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -79,6 +79,7 @@
   "signOutWarning": "Когда вы выходите из White Noise, ваши чаты будут удалены с этого устройства и не могут быть восстановлены на другом устройстве.\n\nЕсли вы не сделали резервную копию приватного ключа, вы не сможете использовать этот профиль в любом другом сервисе Nostr.",
   "backUpPrivateKey": "Сделайте резервную копию приватного ключа",
   "copyPrivateKeyHint": "Скопируйте приватный ключ для восстановления аккаунта на другом устройстве.",
+  "publicKeyCopyError": "Не удалось скопировать публичный ключ. Попробуйте снова.",
   "noChatsYet": "Пока нет чатов",
   "startConversation": "Начните разговор",
   "noMessagesYet": "Пока нет сообщений",
