--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -79,6 +79,7 @@
   "signOutWarning": "Lorsque vous vous déconnectez de White Noise, vos discussions seront supprimées de cet appareil et ne pourront pas être restaurées sur un autre appareil.\n\nSi vous n'avez pas sauvegardé votre clé privée, vous ne pourrez pas utiliser ce profil sur un autre service Nostr.",
   "backUpPrivateKey": "Sauvegardez votre clé privée",
   "copyPrivateKeyHint": "Copiez votre clé privée pour restaurer votre compte sur un autre appareil.",
+  "publicKeyCopyError": "Échec de la copie de la clé publique. Veuillez réessayer.",
   "noChatsYet": "Pas encore de discussions",
   "startConversation": "Démarrer une conversation",
   "noMessagesYet": "Pas encore de messages",
