--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -79,6 +79,7 @@
   "signOutWarning": "Quando esci da White Noise, le tue chat verranno eliminate da questo dispositivo e non potranno essere ripristinate su un altro dispositivo.\n\nSe non hai fatto il backup della tua chiave privata, non potrai usare questo profilo su nessun altro servizio Nostr.",
   "backUpPrivateKey": "Fai il backup della tua chiave privata",
   "copyPrivateKeyHint": "Copia la tua chiave privata per ripristinare il tuo account su un altro dispositivo.",
+  "publicKeyCopyError": "Copia della chiave pubblica fallita. Riprova.",
   "noChatsYet": "Ancora nessuna chat",
   "startConversation": "Inizia una conversazione",
   "noMessagesYet": "Ancora nessun messaggio",
