--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -749,5 +749,25 @@
   "imagePickerError": "Failed to pick image. Please try again.",
   "@imagePickerError": {
     "description": "Error message when image picker fails"
+  },
+
+  "scanNsec": "Scan QR code",
+  "@scanNsec": {
+    "description": "Title for scan nsec screen"
+  },
+
+  "scanNsecHint": "Scan your private key",
+  "@scanNsecHint": {
+    "description": "Hint text on scan nsec screen"
+  },
+
+  "cameraPermissionDenied": "Camera permission denied",
+  "@cameraPermissionDenied": {
+    "description": "Error message when camera permission is denied"
+  },
+
+  "somethingWentWrong": "Something went wrong",
+  "@somethingWentWrong": {
+    "description": "Generic error message"
   }
 }
