--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -139,5 +139,9 @@
   "failedToStartChat": "Falha ao iniciar a conversa. Por favor, tente novamente.",
   "userNotOnWhiteNoise": "Este usuário ainda não está no White Noise.",
   "failedToUpdateFollow": "Falha ao atualizar o status de seguir. Por favor, tente novamente.",
-  "imagePickerError": "Falha ao selecionar imagem. Por favor, tente novamente."
+  "imagePickerError": "Falha ao selecionar imagem. Por favor, tente novamente.",
+  "scanNsec": "Escanear código QR",
+  "scanNsecHint": "Escaneie sua chave privada",
+  "cameraPermissionDenied": "Permissão de câmera negada",
+  "somethingWentWrong": "Algo deu errado"
 }
