--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -141,7 +141,7 @@
   "failedToUpdateFollow": "Не удалось обновить статус подписки. Попробуйте снова.",
   "imagePickerError": "Не удалось выбрать изображение. Попробуйте снова.",
   "scanNsec": "Сканировать QR-код",
-  "scanNsecHint": "Отсканируйте ваш приватный ключ",
+  "scanNsecHint": "Отсканируйте QR-код вашего приватного ключа для входа.",
   "cameraPermissionDenied": "Доступ к камере запрещён",
   "somethingWentWrong": "Что-то пошло не так"
 }
