--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -141,7 +141,7 @@
   "failedToUpdateFollow": "Error al actualizar el estado de seguimiento. Por favor, inténtalo de nuevo.",
   "imagePickerError": "Error al seleccionar imagen. Por favor, inténtalo de nuevo.",
   "scanNsec": "Escanear código QR",
-  "scanNsecHint": "Escanea tu clave privada",
+  "scanNsecHint": "Escanea el código QR de tu clave privada para iniciar sesión.",
   "cameraPermissionDenied": "Permiso de cámara denegado",
   "somethingWentWrong": "Algo salió mal"
 }
