--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -141,7 +141,7 @@
   "failedToUpdateFollow": "Falha ao atualizar o status de seguir. Por favor, tente novamente.",
   "imagePickerError": "Falha ao selecionar imagem. Por favor, tente novamente.",
   "scanNsec": "Escanear código QR",
-  "scanNsecHint": "Escaneie sua chave privada",
+  "scanNsecHint": "Escaneie o código QR da sua chave privada para fazer login.",
   "cameraPermissionDenied": "Permissão de câmera negada",
   "somethingWentWrong": "Algo deu errado"
 }
