Scan QR for nsec (#164)
* Add tests

* use_scan

* routes

* screens

* widgets

* Translations and permissions

* scanner service

* Update CHANGELOG

* Make scanner start/stop return bool

* Design update

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -139,5 +139,9 @@
   "failedToStartChat": "Error al iniciar el chat. Por favor, inténtalo de nuevo.",
   "userNotOnWhiteNoise": "Este usuario aún no está en White Noise.",
   "failedToUpdateFollow": "Error al actualizar el estado de seguimiento. Por favor, inténtalo de nuevo.",
-  "imagePickerError": "Error al seleccionar imagen. Por favor, inténtalo de nuevo."
+  "imagePickerError": "Error al seleccionar imagen. Por favor, inténtalo de nuevo.",
+  "scanNsec": "Escanear código QR",
+  "scanNsecHint": "Escanea el código QR de tu clave privada para iniciar sesión.",
+  "cameraPermissionDenied": "Permiso de cámara denegado",
+  "somethingWentWrong": "Algo salió mal"
 }
