chore: replace sloth texts with whitenoise

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -71,7 +71,7 @@
   "donateDescription": "Als gemeinnützige Organisation existiert White Noise ausschließlich für deine Privatsphäre und Freiheit, nicht für Profit. Deine Unterstützung hält uns unabhängig und kompromisslos.",
   "lightningAddress": "Lightning-Adresse",
   "bitcoinSilentPayment": "Bitcoin Silent Payment",
-  "copiedToClipboardThankYou": "In Zwischenablage kopiert. Danke! 🦥",
+  "copiedToClipboardThankYou": "In Zwischenablage kopiert. Danke!",
   "shareProfileTitle": "Profil teilen",
   "scanToConnect": "Zum Verbinden scannen",
   "signOutTitle": "Abmelden",
@@ -107,8 +107,8 @@
   "ohNo": "Oh nein!",
   "goBack": "Zurück",
   "reportError": "Fehler melden",
-  "workInProgress": "In Arbeit",
-  "wipMessage": "Wir arbeiten an dieser Funktion. Wenn du möchtest, dass wir schneller sind, spende bitte an White Noise",
+  "workInProgress": "Wir arbeiten daran",
+  "wipMessage": "Wir arbeiten an dieser Funktion. Um die Entwicklung zu unterstützen, spende bitte an White Noise",
   "donate": "Spenden",
   "addRelay": "Relay hinzufügen",
   "enterRelayAddress": "Relay-Adresse eingeben",
