--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -71,7 +71,7 @@
   "donateDescription": "Como organización sin fines de lucro, White Noise existe únicamente para tu privacidad y libertad, no para obtener ganancias. Tu apoyo nos mantiene independientes y sin compromisos.",
   "lightningAddress": "Dirección Lightning",
   "bitcoinSilentPayment": "Pago Silencioso de Bitcoin",
-  "copiedToClipboardThankYou": "Copiado al portapapeles. ¡Gracias! 🦥",
+  "copiedToClipboardThankYou": "Copiado al portapapeles. ¡Gracias!",
   "shareProfileTitle": "Compartir perfil",
   "scanToConnect": "Escanear para conectar",
   "signOutTitle": "Cerrar sesión",
@@ -107,8 +107,8 @@
   "ohNo": "¡Oh no!",
   "goBack": "Volver",
   "reportError": "Reportar error",
-  "workInProgress": "En progreso",
-  "wipMessage": "Estamos trabajando en esta función. Si quieres que vayamos más rápido, por favor dona a White Noise",
+  "workInProgress": "Estamos trabajando en esto",
+  "wipMessage": "Estamos trabajando en esta función. Para apoyar el desarrollo, dona a White Noise",
   "donate": "Donar",
   "addRelay": "Añadir Relé",
   "enterRelayAddress": "Introduce la dirección del relé",
