--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -71,7 +71,7 @@
   "donateDescription": "Come organizzazione senza scopo di lucro, White Noise esiste unicamente per la tua privacy e libertà, non per profitto. Il tuo supporto ci mantiene indipendenti e senza compromessi.",
   "lightningAddress": "Indirizzo Lightning",
   "bitcoinSilentPayment": "Pagamento Silenzioso Bitcoin",
-  "copiedToClipboardThankYou": "Copiato negli appunti. Grazie! 🦥",
+  "copiedToClipboardThankYou": "Copiato negli appunti. Grazie!",
   "shareProfileTitle": "Condividi profilo",
   "scanToConnect": "Scansiona per connetterti",
   "signOutTitle": "Esci",
@@ -107,8 +107,8 @@
   "ohNo": "Oh no!",
   "goBack": "Torna indietro",
   "reportError": "Segnala errore",
-  "workInProgress": "Lavoro in corso",
-  "wipMessage": "Stiamo lavorando su questa funzionalità. Se vuoi che procediamo più velocemente, dona a White Noise",
+  "workInProgress": "Ci stiamo lavorando",
+  "wipMessage": "Stiamo lavorando su questa funzionalità. Per supportare lo sviluppo, dona a White Noise",
   "donate": "Dona",
   "addRelay": "Aggiungi Relay",
   "enterRelayAddress": "Inserisci l'indirizzo del relay",
