--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -71,7 +71,7 @@
   "donateDescription": "Como uma organização sem fins lucrativos, o White Noise existe apenas para sua privacidade e liberdade, não para lucro. Seu apoio nos mantém independentes e sem compromissos.",
   "lightningAddress": "Endereço Lightning",
   "bitcoinSilentPayment": "Pagamento Silencioso Bitcoin",
-  "copiedToClipboardThankYou": "Copiado para a área de transferência. Obrigado! 🦥",
+  "copiedToClipboardThankYou": "Copiado para a área de transferência. Obrigado!",
   "shareProfileTitle": "Compartilhar perfil",
   "scanToConnect": "Escaneie para conectar",
   "signOutTitle": "Sair",
@@ -107,8 +107,8 @@
   "ohNo": "Oh não!",
   "goBack": "Voltar",
   "reportError": "Reportar erro",
-  "workInProgress": "Em progresso",
-  "wipMessage": "Estamos trabalhando nesta funcionalidade. Se você quer que a gente vá mais rápido, por favor doe para o White Noise",
+  "workInProgress": "Estamos trabalhando nisso",
+  "wipMessage": "Estamos trabalhando nesta funcionalidade. Para apoiar o desenvolvimento, doe ao White Noise",
   "donate": "Doar",
   "addRelay": "Adicionar Relay",
   "enterRelayAddress": "Digite o endereço do relay",
