--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -71,7 +71,7 @@
   "donateDescription": "Kar amacı gütmeyen bir kuruluş olarak White Noise, yalnızca gizliliğiniz ve özgürlüğünüz için var, kar için değil. Desteğiniz bizi bağımsız ve taviz vermeden tutar.",
   "lightningAddress": "Lightning Adresi",
   "bitcoinSilentPayment": "Bitcoin Sessiz Ödeme",
-  "copiedToClipboardThankYou": "Panoya kopyalandı. Teşekkürler! 🦥",
+  "copiedToClipboardThankYou": "Panoya kopyalandı. Teşekkürler!",
   "shareProfileTitle": "Profili paylaş",
   "scanToConnect": "Bağlanmak için tarayın",
   "signOutTitle": "Çıkış yap",
@@ -107,8 +107,8 @@
   "ohNo": "Ah hayır!",
   "goBack": "Geri dön",
   "reportError": "Hata bildir",
-  "workInProgress": "Üzerinde çalışılıyor",
-  "wipMessage": "Bu özellik üzerinde çalışıyoruz. Daha hızlı ilerlememizi istiyorsanız, lütfen White Noise'a bağış yapın",
+  "workInProgress": "Bunun üzerinde çalışıyoruz",
+  "wipMessage": "Bu özellik üzerinde çalışıyoruz. Geliştirmeyi desteklemek için lütfen White Noise'a bağış yapın",
   "donate": "Bağış yap",
   "addRelay": "Röle Ekle",
   "enterRelayAddress": "Röle adresini girin",
