--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -71,7 +71,7 @@
   "donateDescription": "En tant qu'organisation à but non lucratif, White Noise existe uniquement pour votre vie privée et votre liberté, pas pour le profit. Votre soutien nous maintient indépendants et sans compromis.",
   "lightningAddress": "Adresse Lightning",
   "bitcoinSilentPayment": "Paiement Silencieux Bitcoin",
-  "copiedToClipboardThankYou": "Copié dans le presse-papiers. Merci ! 🦥",
+  "copiedToClipboardThankYou": "Copié dans le presse-papiers. Merci !",
   "shareProfileTitle": "Partager le profil",
   "scanToConnect": "Scanner pour se connecter",
   "signOutTitle": "Déconnexion",
@@ -107,8 +107,8 @@
   "ohNo": "Oh non !",
   "goBack": "Retour",
   "reportError": "Signaler une erreur",
-  "workInProgress": "Travail en cours",
-  "wipMessage": "Nous travaillons sur cette fonctionnalité. Si vous voulez que nous allions plus vite, faites un don à White Noise",
+  "workInProgress": "Nous y travaillons",
+  "wipMessage": "Nous travaillons sur cette fonctionnalité. Pour soutenir le développement, faites un don à White Noise",
   "donate": "Faire un don",
   "addRelay": "Ajouter un Relais",
   "enterRelayAddress": "Entrez l'adresse du relais",
